syntax = "proto3";

package protos.engines;

import "protos/literal.proto";
import "protos/base.proto";

import "google/protobuf/wrappers.proto";


message OpRhs {
  Op op = 1;
  LiteralType rhs = 2;
}

message OpMapping {
  LiteralType lhs = 1;
  repeated OpRhs op_rhs = 2;
}

message ColumnIdentifier {
  string name = 1;
  LiteralType type = 2;
}

message Expression {
  oneof value {
    ColumnIdentifier column_identifier = 1;
    Literal literal = 4;
  }
}

message Filter {
  Expression lhs = 1;
  Op op = 2;
  Expression rhs = 3;
  repeated Filter filters = 4;
}

message QueryRequest {
  Filter filter = 1;
  repeated Expression selection = 2;

  bool distinct_selections = 9;
  OrderByExpression order_by = 10;
}


message OrderByExpression {
  Expression expression = 1;
  SortOrder order = 2;
  google.protobuf.BoolValue allow_nulls = 3;
  google.protobuf.BoolValue nulls_last = 4;
}

enum SortOrder {
  ASC = 0;
  DESC = 1;
}
